[metadata]
name = microagent
version = 0.2.0
url = https://gitlab.com/tamtam-im/pulsar-microserver
author = Dmitriy Vlasov
author_email = scailer@yandex.ru
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
license = MIT license
license_file = LICENSE.md
description = Multiagent framework
long_description = file: README.rst
keywords = 
    async
    pubsub
    queue
    agent
    periodic
    cron

[aliases]
test=pytest

[report]
exclude_lines =
    @abc.abstractmethod
    @abstractmethod
    return NotImplemented

[pep8]
max-line-length=120

[flake8]
ignore = N801,N802,N803,E226,W504,E252
max-line-length=120

[tool:pytest]
addopts = --verbose --cov=microagent --cov-report=html
