[metadata]
name = microagent
url = https://gitlab.com/tamtam-im/pulsar-microserver
author = Dmitriy Vlasov
author_email = scailer@yandex.ru
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: AsyncIO
license = MIT license
license_file = LICENSE.md
description = Multiagent framework
long_description = file: README.rst
keywords = 
    async
    pubsub
    queue
    agent
    periodic
    cron

[aliases]
test=pytest

[coverage:report]
exclude_lines =
    @abc.abstractmethod
    @abstractmethod
    return NotImplemented

[coverage:run]
branch = True

[flake8]
exclude =
    docs/*
ignore = E128, E124, E731
max-line-length=100
max-complexity = 10

[tool:pytest]
addopts = --verbose --cov=microagent --cov-report=html --flake8 --ignore tests/test_tools_pulsar.py
